k8s/old/be-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-minio-ingress
  namespace: be-minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  ingressClassName: nginx
  rules:
    - host: minio.s4v3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
